--- a/style.css
+++ b/style.css
@@ -136,7 +136,21 @@ section {
 
 .space-between {
   gap: 2rem;
-  margin-bottom: 2rem;
+}
+
+.profile {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap; 
+  margin-left: 0%; 
+  margin-right: 0%;
+}
+
+.about{
+  flex-direction: column; 
+  flex-wrap: wrap; 
+  margin-left: 10%; 
+  margin-right: 10%;
 }
 
 .space-between-project-section {
